--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-jq",
   "version": "0.0.0-automated-versioning",
   "description": "Run jq in node",
-  "main": "src/jq.js",
+  "main": "lib/jq.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/sanack/node-jq"
